# acoustic-drone-detection

./: .dockerignore  .folderinfo  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DATA_SOURCES.md  Dockerfile  Dockerfile.data  Dockerfile.dev  FIELD_PROTOCOL.md  INSIGHTS.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/: .folderinfo
.github/workflows/: .folderinfo  ci.yml
agent-memory/: .folderinfo  MEMORY.md  README.md  decisions.md  dsp-notes.md  handoff.md
agent-memory/decisions/: .folderinfo  0001-rust-implementation-language.md  0002-crates-no-workspace.md  0003-three-crate-split.md  0004-microfft-and-libm.md  0005-docker-first-two-services.md  0006-heuristic-detector-v0.1.0.md  0007-multi-task-suite.md
agent-memory/handoffs/: .folderinfo  2026-06-01-benchmark-wave.md  2026-06-01-hardening-wave.md  2026-06-01-multitask-suite.md  2026-06-01-v0.1.0-scaffold.md  2026-06-02-completion-wave.md  2026-06-02-evidence-wave.md
agent-memory/insights/: .folderinfo  agent-crate-integration-gotchas.md  commit-before-dispatching-tree-mutating-agents.md  dads-is-a-merge-superset.md  microfft-nyquist-packing.md  msys-path-mangling.md  slim-rust-missing-rustfmt-clippy.md  synth-vs-real-generalization.md  synthetic-signal-discriminates.md
agent-memory/notes/: .folderinfo  approaches-survey.md  architecture.md  benchmark-results.md  datasets.md  detection-thesis.md  dsp-conventions.md  honest-limitations.md  project-goal.md  sensors-and-arrays.md  suite-results.md
agent-memory/reference/: .folderinfo  lit-review-2026-06.md  prior-art.md
assets/: .folderinfo
benchmarks/: .folderinfo  MODEL_CARDS.md  README.md  pareto.py  plot.py  ratesweep.py  robustness.py
benchmarks/plots/: .folderinfo
benchmarks/results/: .folderinfo
crates/: .folderinfo
crates/drone-bench/: .folderinfo  Cargo.toml
crates/drone-bench/src/: .folderinfo  approach.rs  dataset.rs  lib.rs  main.rs  metrics.rs  util.rs
crates/drone-bench/src/approaches/: .folderinfo  band_ratio.rs  cepstrum.rs  envelope_periodicity.rs  feature_fusion.rs  fusion.rs  gtcc_lr.rs  hps.rs  mfcc_lr.rs  mfcc_mlp.rs  mod.rs  physics_fused.rs  sentry.rs  spectral_gate.rs  spectrogram_template.rs  template.rs
crates/drone-bss/: .folderinfo  Cargo.toml
crates/drone-bss/src/: .folderinfo  eig.rs  fastica.rs  lib.rs  metrics.rs  mix.rs  rng.rs
crates/drone-bss/tests/: .folderinfo  separation.rs
crates/drone-cli/: .folderinfo  Cargo.toml
crates/drone-cli/src/: .folderinfo  main.rs
crates/drone-cnn/: .folderinfo  Cargo.toml
crates/drone-cnn/src/: .folderinfo  data.rs  main.rs  mel.rs  model.rs  train.rs
crates/drone-detect/: .folderinfo  Cargo.toml
crates/drone-detect/src/: .folderinfo  lib.rs
crates/drone-doa/: .folderinfo  Cargo.toml
crates/drone-doa/src/: .folderinfo  azimuth.rs  gcc_phat.rs  geometry.rs  lib.rs  sim.rs
crates/drone-dsp/: .folderinfo  Cargo.toml
crates/drone-dsp/src/: .folderinfo  features.rs  fft.rs  lib.rs  window.rs
crates/drone-edge/: .folderinfo  Cargo.toml
crates/drone-edge/src/: .folderinfo  lib.rs
crates/drone-firmware/: .folderinfo  Cargo.toml  README.md
crates/drone-firmware/.cargo/: .folderinfo  config.toml
crates/drone-firmware/src/: .folderinfo  main.rs
crates/drone-freq/: .folderinfo  Cargo.toml
crates/drone-freq/benchmarks/results/: freq.json
crates/drone-freq/src/: .folderinfo  autocorr.rs  cepstrum.rs  fuse.rs  hps.rs  lib.rs
crates/drone-id/: .folderinfo  Cargo.toml
crates/drone-id/benchmarks/results/: drone_id.json
crates/drone-id/src/: .folderinfo  data.rs  features.rs  lib.rs  main.rs  metrics.rs  model.rs
crates/drone-live/: .folderinfo  Cargo.toml
crates/drone-live/src/: .folderinfo  detector.rs  devices.rs  listen.rs  main.rs  record.rs  resample.rs
crates/drone-mobile/: .folderinfo  Cargo.toml  README.md
crates/drone-mobile/src/: .folderinfo  lib.rs
crates/drone-range/: .folderinfo  Cargo.toml
crates/drone-range/src/: .folderinfo  classify.rs  features.rs  lib.rs  regress.rs  sim.rs
crates/drone-vendor/: .folderinfo  Cargo.toml
crates/drone-vendor/src/: .folderinfo  data.rs  features.rs  lib.rs  main.rs  metrics.rs  model.rs
data/: .folderinfo
docker/: .folderinfo  Dockerfile.dev  Dockerfile.plot
scripts/: .folderinfo  bench.sh  build-firmware.sh  check.sh  download_dads.py  folderinfo.sh  infographic.py
