[package]
name = "drone-id"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Multiclass drone-TYPE identification: MFCC features + softmax logistic regression, benchmarked with per-class metrics and a confusion matrix. The recognition head alongside the binary detection head."
repository = "https://github.com/JoulesSpace/acoustic-drone-detection"

# Host-side (std) crate. This is the "recognition" head, insightface-style: where
# drone-detect/drone-bench answer "is a drone present?", this answers "which TYPE
# of drone is it?". It reuses drone-bench's dataset loader and spectra front-end
# and drone-dsp's mel/FFT primitives, then trains a multinomial logistic
# regression (softmax) by deterministic gradient descent — no ML crate.

[[bin]]
name = "drone-id"
path = "src/main.rs"

[dependencies]
drone-dsp = { path = "../drone-dsp" }
drone-bench = { path = "../drone-bench" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
